# OS_Lab_1_3

./: Bash
DynamicLib/: CMakeLists.txt  Vector2D.cpp  Vector2D.h
StaticLib/: CMakeLists.txt  Number.cpp  Number.h
TestSolution/: CMakeLists.txt  main.cpp
